k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: make-presentations
  namespace: production
  labels:
    app: make-presentations
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: LoadBalancer
  selector:
    app: make-presentations
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
