k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: make-presentations
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "make-presentations-ip"
    networking.gke.io/managed-certificates: "make-presentations-cert"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: make-presentations
      port:
        number: 80
